FIX: layout issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -35,6 +35,7 @@ body {
   background-size: cover;
   height: 100%;
   display: flex;
+  justify-content: flex-end;
 }
 
 img {
@@ -140,14 +141,13 @@ video {
   height: 100%;
   background-color: var(--secondary);
   opacity: .2;
-  transform: skewY(20deg);
+  transform: skewY(10deg);
   transform-origin: bottom right;
 }
 
 .main_content {
   display: flex;
   flex-direction: column;
-  /* align-items: center; */
   margin-top: 5vh;
   height: 50vh;
   z-index: 10;
@@ -235,7 +235,7 @@ video {
   .main {
     height: 100%;
     min-height: 0;
-    width: 20.5rem;
+    width: 30.5rem;
     padding: 20px;
   }
 
@@ -303,7 +303,14 @@ video {
 
 } /* end media*/
 
-@media screen and (min-width: 1150px){
+@media screen and (min-width: 1100px){
+  .main {
+    width: 60%;
+  }
+}
+/* end media */
+
+@media screen and (min-width: 1250px){
   
  .main_content {
    width: 50%; 
@@ -311,9 +318,16 @@ video {
 
 h1 {
   font-size: 5rem;
+  text-align: center;
 }
+
+.input_group-newsletter input,
+.input_group-newsletter button {
+  text-align: center;
+}
+
 .main {
-  width: 50.5rem;
+  width: 85.5rem;
  
 }
 
